{
    "name": "BasicContoller",
    "maps": [
        {
            "name": "Gameplay",
            "id": "18b15df2-2d94-4907-8ebc-0e93c54f2e34",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ef0d9d0f-3313-45cc-90d5-c43ebcc2a53c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "bc6569a9-8be7-47e1-9659-6bbe71ebc8ec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RT",
                    "type": "Button",
                    "id": "dd77b59d-4b4f-41c4-92fd-b2569895e310",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DPadDown",
                    "type": "Button",
                    "id": "dca80fd3-9a86-4821-846e-24b916a71211",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DPadUp",
                    "type": "Button",
                    "id": "2100595a-4e52-44ba-a4e8-7d76d55e8e09",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DPadLeft",
                    "type": "Button",
                    "id": "a6b32832-2d5b-4131-a6a4-e4922ed26cb7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DPadRight",
                    "type": "Button",
                    "id": "cc7fd6b9-9955-448c-b28a-fe0e66fdad4a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67b39086-186b-4338-8ace-a4a1269bea3b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5de0fad2-92ec-4449-b5fa-684415967154",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4017e051-2af3-4bac-8157-c0141ad9a24a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0ca5677-5186-42e2-b988-ff011a764b62",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfab83c0-2891-446d-8994-3adf2dceea3a",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c78ec643-abbe-469c-9dfc-a8a8bc998288",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9abf027a-8197-4f24-8ddc-04272b700cac",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}